--- a/index.html
+++ b/index.html
@@ -5,33 +5,46 @@
 	<title> PhoneStore </title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.1/angular.min.js"></script>
-    
-    <script type="text/javascript" src="phone_app.js"></script>	
+
+    <script type="text/javascript" src="phone_app.js"></script>
+		<style type="text/css">
+			#main {
+				margin: 0 auto;
+				max-width: 800px;
+				background:#b3b3ff;
+			}
+			.product-item:hover{
+				cursor:pointer;
+			}
+
+		</style>
 </head>
 <body ng-controller="StoreController as store">
+	<div id="main">
 	<!-- Store Header  -->
 	<header>
-		<h1 class="text-center">Vincent's Phone Store</h1>
-		<h2 class="text-center">-An Angular Store-</h2>
+		<h1 class="text-center" class="store-name">Vincent's Phone Store</h1>
+		<h2 class="text-center" class="store-title">-An Angular Store-</h2>
 	</header>
 
 	<!-- Products Container -->
 	<div class="list-group">
-		
+
 		<!-- Product Container -->
 		<div class="list-group-item" ng-repeat="product in store.products">
 
-			<a ng-click="toggle = !toggle" data-placement="right" title="Click for more detail" data-delay='{"show": "100", "hide": "100"}' >
-			<h4>{{product.name}}</h4> 
+			<a ng-click="toggle = !toggle" data-placement="right" title="Click for more detail" data-delay='{"show": "100", "hide": "100"}' class="product-item">
+			<h4>{{product.name}}</h4>
 			<strong>Brief Description</strong> : {{product.description}}
 			<em class="pull-right">{{product.price | currency}}</em>
 			</a>
-			
+
 			<product-tabs></product-tabs>
 		</div>
 
 	</div>
 
+</div> <!--End of id="main"  -->
 
 </body>
 </html>
